changeLog

1. Learnt setState and wrote code to understand it.
2. Render same element multiple times using map and why is key used in map.