@@ -1,4 +1,11 @@
 changeLog
-
-1. Learnt setState and wrote code to understand it.
-2. Render same element multiple times using map and why is key used in map.
+=================================================================================
+Learning Changes
+=================================================================================
+1. commit-1: Learnt setState and wrote code to understand it.
+2. commit-2: Render same element multiple times using map and why is key used in map.
+=================================================================================
+Making App Changes
+=================================================================================
+3. commit-3: Calling open source jsonplacholder API for getting the names of monsters
+=================================================================================
